--- a/formulario.html
+++ b/formulario.html
@@ -25,7 +25,7 @@
       </div>
       <div class="dbl-field">
         <div class="field">
-          <input type="text" name="phone" placeholder="Telefono">
+          <input type="text" name="phone" placeholder="Telefono" oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\..*)\./g, '$1');" required>
           <i class='fas fa-phone-alt'></i>
         </div>
        <!-- <div class="field">
